Known Limitations
--------------------------

Web DOM automation works on a single page of internet explorer (no multi tabs or multi processes)
Calling code must run in STA apartment
Memory leaks in tesseract OCR engine


1/3/10
---------

Test Builder
	New test cases to deal with combo boxes
	
Engine
	New improved algorithm for finding images
	Html UL, OL now have items property	

Fixed Bugs
	Log displayed un-necessary errors
	HTMLTable , fix rows by index and cells by index (HtmlTr)
	

4/3/10
---------

Test Builder
	Fixed 'object reference' log error when control is not found, to more descriptive error
	Added 'scenario' configuration for log folder structure
	Fixed a bug in while test case re-evaluation

Engine
	Fixed a bug in FindByProperty of null references
	Replaced gocr with tesseract ocr


8/3/10
---------

Test Builder
	Fixed a bug in setting log file for single test case run
Engine
	Fixed memory leak in finding images
	Fixed a crash when closing all ie windows
	Fixed a bug in initialization of web document
	
	
28/3/10
-----------

Engine
	WPF automation is merged with UI Automation, to see how to test WPF apps. see http://www.qaliber.net/Wiki/index.php?title=How_to_Test_WPF_%26_Silverlight
	WatiN is integrated, with WatiN you can also test firefox, and in the future chrome
	More unique identification in UI automation
	A few bug-fixes

23/5/10
----------

Test Builder
	Feature req. 2999997
	Feature req. 2999202
	Feature req. 2999200
	Feature req. 2997501