@@ -1,0 +1,33 @@
+/*	  
+ * Copyright (C) 2010 QAlibers (C) http://qaliber.net
+ * This file is part of QAliber.
+ * QAliber is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * QAliber is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with QAliber.	If not, see <http://www.gnu.org/licenses/>.
+ */
+ 
+using System;
+using System.Collections.Generic;
+using System.Text;
+using mshtml;
+
+namespace QAliber.Engine.Controls.Web
+{
+	/// <summary>
+	/// Represents HTML element BR tag.
+	/// No additional functionality or information to WebControl
+	/// </summary>
+	public class HTMLButton : WebControl
+	{
+		public HTMLButton(IHTMLElement element)
+			: base(element)
+		{ }
+	}
+}
