@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{27B3A35B-FB9E-4319-A7DF-F55B1FE65FD6}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -88,6 +88,7 @@
     <Compile Include="Controls\Watin\WatinBaseControl.cs" />
     <Compile Include="Controls\Watin\WatinControl.cs" />
     <Compile Include="Controls\Watin\WatinRoot.cs" />
+    <Compile Include="Controls\Web\HTMLButton.cs" />
     <Compile Include="Controls\Web\HTMLTextArea.cs" />
     <Compile Include="Controls\Web\WebPage.cs" />
     <Compile Include="Controls\Web\WebRoot.cs" />
